Set browsersync and express server to always serve index.html to enable clientside routing when developing SPA's.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-loader": "^5.0.0",
     "bower": "^1.4.1",
     "browser-sync": "~2.6.4",
+    "browser-sync-spa": "^1.0.2",
     "classnames": "^1.2.0",
     "css-mqpacker": "^3.1.0",
     "csswring": "^3.0.3",
     "del": "^1.1.1",
+    "express-spa": "0.0.2",
     "flux": "^2.0.1",
     "gulp": "^3.8.11",
     "gulp-changed": "^1.2.1",
