--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "browser-sync": "~2.6.4",
     "browser-sync-spa": "^1.0.2",
     "classnames": "^1.2.0",
+    "css-loader": "^0.12.0",
     "css-mqpacker": "^3.1.0",
     "csswring": "^3.0.3",
     "del": "^1.1.1",
     "express-spa": "0.0.2",
+    "extract-text-webpack-plugin": "^0.7.0",
     "flux": "^2.0.1",
     "gulp": "^3.8.11",
     "gulp-changed": "^1.2.1",
     "gulp-filesize": "0.0.6",
+    "gulp-gh-pages": "^0.5.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^5.1.3",
@@ -56,17 +59,28 @@
     "karma-webpack": "^1.5.0",
     "lodash": "^3.7.0",
     "merge-stream": "^0.1.7",
+    "postcss": "^4.1.6",
+    "postcss-color-function": "^1.2.0",
+    "postcss-import": "^5.2.2",
+    "postcss-loader": "^0.4.1",
+    "postcss-media-minmax": "^1.1.0",
+    "postcss-mixins": "^0.1.1",
+    "postcss-neat": "^1.0.0",
+    "postcss-nested": "^0.2.2",
+    "postcss-simple-extend": "^0.3.1",
+    "postcss-simple-vars": "^0.2.4",
     "pretty-hrtime": "~1.0.0",
     "react": "^0.13.2",
     "react-router": "^0.13.2",
     "require-dir": "^0.3.0",
+    "sass-loader": "^0.6.0",
+    "style-loader": "^0.12.1",
     "vinyl-source-stream": "~1.1.0",
     "webpack": "^1.8.9"
   },
   "devDependencies": {
     "compression": "^1.4.3",
     "express": "^4.12.3",
-    "gulp-gh-pages": "^0.5.1",
     "morgan": "^1.5.2",
     "open": "0.0.5"
   }
