--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
     "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1
+    "react/wrap-multilines": 1,
 
     /**
      * Strict mode
