--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "genesis",
   "version": "1.0.0",
   "description": "Boilerplate with gulp, webpack, babel and lots of goodies.",
+  "author": "Magnus Bergman <hello@magnus.sexy>",
   "engines": {
     "node": "0.10.36",
     "npm": "2.3.0"
@@ -11,63 +12,66 @@
     "url": "git@bitbucket.org:magnus-bergman/genesis.git"
   },
   "scripts": {
-    "test": "gulp karma",
-    "start": "gulp server",
-    "server": "gulp server",
-    "deploy": "gulp deploy",
-    "dev": "gulp build:development",
-    "prod": "gulp build:production"
+    "postinstall": "./node_modules/.bin/bower install",
+    "test": "./node_modules/.bin/gulp karma",
+    "start": "./node_modules/.bin/gulp server",
+    "server": "./node_modules/.bin/gulp server",
+    "deploy": "./node_modules/.bin/gulp deploy",
+    "dev": "./node_modules/.bin/gulp build:development",
+    "prod": "./node_modules/.bin/gulp build:production"
   },
   "dependencies": {
-    "autoprefixer-core": "^5.1.11",
-    "babel": "^5.1.11",
-    "babel-core": "^5.1.11",
-    "babel-loader": "^5.0.0",
+    "autoprefixer-core": "^5.2.0",
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
     "bower": "^1.4.1",
-    "browser-sync": "~2.6.4",
+    "browser-sync": "~2.7.6",
     "browser-sync-spa": "^1.0.2",
-    "classnames": "^1.2.0",
+    "classnames": "^2.1.2",
     "css-mqpacker": "^3.1.0",
-    "csswring": "^3.0.3",
-    "del": "^1.1.1",
+    "csswring": "^3.0.5",
+    "del": "^1.2.0",
     "express-spa": "0.0.2",
-    "flux": "^2.0.1",
-    "gulp": "^3.8.11",
+    "flux": "^2.0.3",
+    "gulp": "^3.9.0",
     "gulp-changed": "^1.2.1",
     "gulp-filesize": "0.0.6",
     "gulp-imagemin": "^2.2.1",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.1.3",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.4.0",
-    "gulp-sass": "~1.3.3",
+    "gulp-postcss": "^5.1.8",
+    "gulp-rev": "^4.0.0",
+    "gulp-rev-replace": "^0.4.1",
+    "gulp-sass": "~2.0.1",
     "gulp-sequence": "^0.3.2",
-    "gulp-sizereport": "^1.0.2",
+    "gulp-sizereport": "^1.1.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
+    "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
+    "karma": "^0.12.35",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
-    "karma-firefox-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.1.10",
     "karma-nyan-reporter": "0.0.60",
     "karma-sinon-chai": "^0.3.0",
-    "karma-webpack": "^1.5.0",
-    "lodash": "^3.7.0",
+    "karma-webpack": "^1.5.1",
+    "lodash": "^3.9.3",
     "merge-stream": "^0.1.7",
     "pretty-hrtime": "~1.0.0",
-    "react": "^0.13.2",
-    "react-router": "^0.13.2",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "require-dir": "^0.3.0",
     "vinyl-source-stream": "~1.1.0",
-    "webpack": "^1.8.9"
+    "webpack": "^1.9.10"
   },
   "devDependencies": {
-    "compression": "^1.4.3",
-    "express": "^4.12.3",
+    "compression": "^1.4.4",
+    "express": "^4.12.4",
     "gulp-gh-pages": "^0.5.1",
-    "morgan": "^1.5.2",
+    "morgan": "^1.5.3",
     "open": "0.0.5"
-  }
+  },
+  "private": true,
+  "license": "MIT"
 }
