--- a/package.json
+++ b/package.json
@@ -18,70 +18,68 @@
     "dev": "gulp build:development",
     "prod": "gulp build:production"
   },
-  "dependencies": {
-    "autoprefixer-core": "^5.1.11",
-    "babel": "^5.1.11",
-    "babel-core": "^5.1.11",
-    "babel-loader": "^5.0.0",
+  "dependencies": {},
+  "devDependencies": {
+    "autoprefixer-core": "^5.2.0",
+    "autoprefixer-loader": "^2.0.0",
+    "babel": "^5.5.5",
+    "babel-core": "^5.5.5",
+    "babel-eslint": "^3.1.14",
+    "babel-loader": "^5.1.4",
     "bower": "^1.4.1",
-    "browser-sync": "~2.6.4",
+    "browser-sync": "~2.7.6",
     "browser-sync-spa": "^1.0.2",
-    "classnames": "^1.2.0",
-    "css-loader": "^0.12.0",
+    "classnames": "^2.1.2",
+    "compression": "^1.4.4",
+    "css-loader": "^0.14.4",
     "css-mqpacker": "^3.1.0",
-    "csswring": "^3.0.3",
-    "del": "^1.1.1",
+    "csswring": "^3.0.5",
+    "del": "^1.2.0",
+    "eslint": "^0.22.1",
+    "eslint-plugin-react": "^2.5.0",
+    "express": "^4.12.4",
     "express-spa": "0.0.2",
-    "extract-text-webpack-plugin": "^0.7.0",
-    "flux": "^2.0.1",
-    "gulp": "^3.8.11",
+    "extract-text-webpack-plugin": "^0.8.1",
+    "file-loader": "^0.8.4",
+    "flux": "^2.0.3",
+    "gulp": "^3.9.0",
     "gulp-changed": "^1.2.1",
     "gulp-filesize": "0.0.6",
-    "gulp-gh-pages": "^0.5.1",
+    "gulp-gh-pages": "^0.5.2",
     "gulp-imagemin": "^2.2.1",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.1.3",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.4.0",
-    "gulp-sass": "~1.3.3",
+    "gulp-postcss": "^5.1.8",
+    "gulp-rev": "^4.0.0",
+    "gulp-rev-replace": "^0.4.1",
+    "gulp-sass": "~2.0.1",
     "gulp-sequence": "^0.3.2",
-    "gulp-sizereport": "^1.0.2",
+    "gulp-sizereport": "^1.1.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
+    "gulp-style-inject": "0.0.3",
+    "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
+    "karma": "^0.12.36",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
-    "karma-firefox-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.1.10",
     "karma-nyan-reporter": "0.0.60",
     "karma-sinon-chai": "^0.3.0",
-    "karma-webpack": "^1.5.0",
-    "lodash": "^3.7.0",
+    "karma-webpack": "^1.5.1",
+    "lodash": "^3.9.3",
     "merge-stream": "^0.1.7",
-    "postcss": "^4.1.6",
-    "postcss-color-function": "^1.2.0",
-    "postcss-import": "^5.2.2",
-    "postcss-loader": "^0.4.1",
-    "postcss-media-minmax": "^1.1.0",
-    "postcss-mixins": "^0.1.1",
-    "postcss-neat": "^1.0.0",
-    "postcss-nested": "^0.2.2",
-    "postcss-simple-extend": "^0.3.1",
-    "postcss-simple-vars": "^0.2.4",
+    "morgan": "^1.5.3",
+    "node-sass": "^3.1.2",
+    "open": "0.0.5",
+    "postcss": "^4.1.11",
+    "postcss-loader": "^0.4.4",
     "pretty-hrtime": "~1.0.0",
-    "react": "^0.13.2",
-    "react-router": "^0.13.2",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "require-dir": "^0.3.0",
-    "sass-loader": "^0.6.0",
-    "style-loader": "^0.12.1",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
     "vinyl-source-stream": "~1.1.0",
-    "webpack": "^1.8.9"
-  },
-  "devDependencies": {
-    "compression": "^1.4.3",
-    "express": "^4.12.3",
-    "morgan": "^1.5.2",
-    "open": "0.0.5"
+    "webpack": "^1.9.10"
   }
 }
