--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate with gulp, webpack, babel and lots of goodies.",
   "author": "Magnus Bergman <hello@magnus.sexy>",
   "dependencies": {
-    "normalize.css": "~3.0.3",
+    "normalize-scss": "~3.0.3",
     "susy": "~2.2.2"
   },
   "devDependencies": {}
