--- a/package.json
+++ b/package.json
@@ -22,68 +22,71 @@
   },
   "dependencies": {
     "classnames": "^2.1.3",
-    "flux": "^2.0.3",
+    "color": "^0.10.1",
+    "flux": "^2.1.1",
+    "radium": "^0.13.8",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "sanitize.css": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "autoprefixer-loader": "^2.0.0",
-    "babel": "^5.8.12",
-    "babel-core": "^5.8.12",
-    "babel-eslint": "^4.0.5",
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.22",
+    "babel-eslint": "^4.0.10",
     "babel-loader": "^5.3.2",
-    "bower": "^1.4.1",
-    "browser-sync": "~2.8.0",
+    "bower": "^1.5.1",
+    "browser-sync": "~2.8.2",
     "browser-sync-spa": "^1.0.2",
-    "compression": "^1.5.1",
-    "css-loader": "^0.15.6",
-    "css-mqpacker": "^3.1.0",
-    "csswring": "^3.0.5",
-    "del": "^1.2.0",
-    "eslint": "^0.24.1",
-    "eslint-plugin-react": "^3.1.0",
-    "express": "^4.13.1",
+    "compression": "^1.5.2",
+    "css-loader": "^0.16.0",
+    "css-mqpacker": "^4.0.0",
+    "csswring": "^3.0.7",
+    "del": "^1.2.1",
+    "eslint": "^1.2.1",
+    "eslint-config-airbnb": "0.0.8",
+    "eslint-plugin-react": "^3.2.3",
+    "express": "^4.13.3",
     "express-spa": "0.0.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "gulp": "^3.9.0",
-    "gulp-changed": "^1.2.1",
+    "gulp-changed": "^1.3.0",
     "gulp-filesize": "0.0.6",
     "gulp-gh-pages": "^0.5.2",
     "gulp-imagemin": "^2.3.0",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.1.10",
-    "gulp-rev": "^5.1.0",
+    "gulp-postcss": "^6.0.0",
+    "gulp-rev": "^6.0.0",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "~2.0.4",
-    "gulp-sequence": "^0.4.0",
-    "gulp-sizereport": "^1.1.2",
+    "gulp-sequence": "^0.4.1",
+    "gulp-sizereport": "^1.1.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-style-inject": "0.0.3",
     "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.4",
-    "karma": "^0.13.3",
+    "gulp-watch": "^4.3.5",
+    "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-cli": "0.1.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
-    "karma-nyan-reporter": "0.2.1",
+    "karma-nyan-reporter": "0.2.2",
     "karma-sinon-chai": "^1.0.0",
-    "karma-webpack": "^1.6.0",
-    "lodash": "^3.10.0",
-    "merge-stream": "^0.1.8",
+    "karma-webpack": "^1.7.0",
+    "lodash": "^3.10.1",
+    "merge-stream": "^1.0.0",
     "morgan": "^1.6.1",
     "node-sass": "^3.2.0",
     "open": "0.0.5",
-    "postcss": "^4.1.16",
-    "postcss-loader": "^0.5.1",
+    "postcss": "^5.0.2",
+    "postcss-loader": "^0.6.0",
     "pretty-hrtime": "~1.0.0",
     "require-dir": "^0.3.0",
-    "sass-loader": "^1.0.3",
+    "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "vinyl-source-stream": "~1.1.0",
-    "webpack": "^1.10.5"
+    "webpack": "^1.11.0"
   },
-  "private": true,
   "license": "MIT"
 }
