--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.13.3",
     "express-spa": "0.0.2",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-filesize": "0.0.6",
@@ -66,6 +67,7 @@
     "gulp-style-inject": "0.0.3",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
+    "html-webpack-plugin": "^1.6.1",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-cli": "0.1.0",
@@ -82,11 +84,16 @@
     "postcss": "^5.0.2",
     "postcss-loader": "^0.6.0",
     "pretty-hrtime": "~1.0.0",
+    "proxy-middleware": "^0.13.1",
+    "react-hot-loader": "^1.2.9",
     "require-dir": "^0.3.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
+    "url": "^0.10.3",
+    "url-loader": "^0.5.6",
     "vinyl-source-stream": "~1.1.0",
-    "webpack": "^1.11.0"
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "license": "MIT"
 }
