--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "url": "git@bitbucket.org:magnus-bergman/genesis.git"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install",
-    "test": "./node_modules/.bin/gulp karma",
-    "start": "./node_modules/.bin/gulp server",
-    "server": "./node_modules/.bin/gulp server",
-    "deploy": "./node_modules/.bin/gulp deploy",
-    "dev": "./node_modules/.bin/gulp build:development",
-    "prod": "./node_modules/.bin/gulp build:production"
+    "start": "npm run build && node server",
+    "test": "./node_modules/.bin/karma start karma.conf.js --log-level debug --single-run",
+    "hot": "./node_modules/.bin/webpack-dev-server --progress --colors --hot --inline",
+    "build": "./node_modules/.bin/rimraf ./public/assets ./public/tmp ./public/index.html && NODE_ENV=production ./node_modules/.bin/webpack -p --colors --progress --config webpack.production.config.js"
   },
   "dependencies": {
     "classnames": "^2.1.3",
@@ -27,47 +24,30 @@
     "radium": "^0.13.8",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "sanitize.css": "^1.1.0"
+    "sanitize.css": "^2.0.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
+    "autoprefixer": "^6.0.0",
     "autoprefixer-loader": "^2.0.0",
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.22",
-    "babel-eslint": "^4.0.10",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
+    "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
-    "bower": "^1.5.1",
-    "browser-sync": "~2.8.2",
-    "browser-sync-spa": "^1.0.2",
     "compression": "^1.5.2",
-    "css-loader": "^0.16.0",
+    "css-loader": "^0.17.0",
     "css-mqpacker": "^4.0.0",
-    "csswring": "^3.0.7",
-    "del": "^1.2.1",
-    "eslint": "^1.2.1",
+    "csswring": "^4.0.0",
+    "eslint": "^1.3.1",
     "eslint-config-airbnb": "0.0.8",
-    "eslint-plugin-react": "^3.2.3",
+    "eslint-plugin-react": "^3.3.1",
     "express": "^4.13.3",
     "express-spa": "0.0.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "gulp": "^3.9.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-filesize": "0.0.6",
-    "gulp-gh-pages": "^0.5.2",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.0.0",
-    "gulp-rev": "^6.0.0",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "~2.0.4",
-    "gulp-sequence": "^0.4.1",
-    "gulp-sizereport": "^1.1.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-style-inject": "0.0.3",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "html-webpack-plugin": "^1.6.1",
+    "html-loader": "^0.3.0",
+    "http-proxy": "^1.11.2",
+    "indexhtml-webpack-plugin": "^0.1.9",
+    "json-loader": "^0.5.2",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-cli": "0.1.0",
@@ -79,20 +59,21 @@
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "morgan": "^1.6.1",
-    "node-sass": "^3.2.0",
+    "node-sass": "^3.3.2",
+    "object-assign": "^4.0.1",
     "open": "0.0.5",
-    "postcss": "^5.0.2",
+    "postcss": "^5.0.4",
     "postcss-loader": "^0.6.0",
     "pretty-hrtime": "~1.0.0",
-    "proxy-middleware": "^0.13.1",
-    "react-hot-loader": "^1.2.9",
-    "require-dir": "^0.3.0",
+    "proxy-middleware": "^0.14.0",
+    "react-hot-loader": "^1.3.0",
+    "rimraf": "^2.4.3",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
-    "url": "^0.10.3",
+    "url": "^0.11.0",
     "url-loader": "^0.5.6",
     "vinyl-source-stream": "~1.1.0",
-    "webpack": "^1.11.0",
+    "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
   "license": "MIT"
