--- a/package.json
+++ b/package.json
@@ -4,70 +4,95 @@
   "description": "Boilerplate with gulp, webpack, babel and lots of goodies.",
   "author": "Magnus Bergman <hello@magnus.sexy>",
   "engines": {
-    "node": "0.10.36",
-    "npm": "2.3.0"
+    "node": "5.0.0",
+    "npm": "3.3.9"
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:magnus-bergman/genesis.git"
+    "url": "git@github.com:genesishq/genesis.git"
   },
   "scripts": {
-    "start": "npm run build && node server",
-    "test": "./node_modules/.bin/karma start karma.conf.js --log-level debug --single-run",
-    "hot": "./node_modules/.bin/webpack-dev-server --progress --colors --hot --inline",
-    "build": "./node_modules/.bin/rimraf ./public/assets ./public/tmp ./public/index.html && NODE_ENV=production ./node_modules/.bin/webpack -p --colors --progress --config webpack.production.config.js"
+    "postinstall": "NODE_ENV=production webpack -p --colors --progress --config webpack.production.config.js",
+    "test": "karma start karma.conf.js --log-level debug --single-run",
+    "lint": "standard",
+    "clean": "rimraf public",
+    "start": "node server",
+    "dev": "npm-run-all --parallel dev:api dev:web",
+    "dev:web": "webpack-dev-server --progress --colors --hot --inline",
+    "dev:api": "PORT=5000 nodemon server -w server",
+    "prebuild": "npm run clean -s",
+    "build": "NODE_ENV=production webpack -p --colors --progress --config webpack.production.config.js"
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "globals": [
+      "TweenLite",
+      "TimelineLite",
+      "Power1",
+      "Power2",
+      "Power3",
+      "Power4"
+    ]
   },
   "dependencies": {
-    "classnames": "^2.1.3",
+    "autoprefixer": "^6.0.3",
+    "babel-core": "^5.8.33",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.3",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-1": "^6.0.15",
+    "classnames": "^2.2.0",
     "color": "^0.10.1",
-    "flux": "^2.1.1",
-    "radium": "^0.13.8",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
-    "sanitize.css": "^2.0.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.0.0",
-    "autoprefixer-loader": "^2.0.0",
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.23",
-    "babel-eslint": "^4.1.1",
-    "babel-loader": "^5.3.2",
-    "compression": "^1.5.2",
-    "css-loader": "^0.17.0",
-    "css-mqpacker": "^4.0.0",
+    "compression": "^1.6.0",
+    "cors": "^2.7.1",
+    "css-loader": "^0.21.0",
     "csswring": "^4.0.0",
-    "eslint": "^1.3.1",
-    "eslint-config-airbnb": "0.0.8",
-    "eslint-plugin-react": "^3.3.1",
     "express": "^4.13.3",
-    "express-spa": "0.0.2",
-    "extract-text-webpack-plugin": "^0.8.2",
+    "extract-text-webpack-plugin": "^0.9.0",
     "file-loader": "^0.8.4",
-    "html-loader": "^0.3.0",
-    "indexhtml-webpack-plugin": "^0.1.9",
-    "json-loader": "^0.5.2",
-    "karma": "^0.13.9",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-cli": "0.1.0",
+    "flux": "^2.1.1",
+    "gsap": "^1.18.0",
+    "history": "^1.13.0",
+    "html-webpack-plugin": "^1.6.2",
+    "json-loader": "^0.5.3",
+    "karma": "^0.13.14",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "0.1.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "karma-nyan-reporter": "0.2.2",
-    "karma-sinon-chai": "^1.0.0",
+    "karma-sinon-chai": "^1.1.0",
     "karma-webpack": "^1.7.0",
     "morgan": "^1.6.1",
-    "node-sass": "^3.3.2",
+    "node-sass": "^3.4.1",
+    "nodemon": "^1.8.0",
+    "npm-run-all": "^1.2.12",
     "object-assign": "^4.0.1",
-    "open": "0.0.5",
-    "postcss": "^5.0.4",
-    "postcss-loader": "^0.6.0",
+    "offline-plugin": "^1.3.1",
+    "postcss": "^5.0.10",
+    "postcss-loader": "^0.7.0",
+    "radium": "^0.14.3",
+    "random-global": "^1.0.1",
+    "random-string": "^0.1.2",
+    "raw-loader": "^0.5.1",
+    "react": "^0.14.1",
+    "react-addons-transition-group": "^0.14.1",
+    "react-addons-update": "^0.14.2",
+    "react-dom": "^0.14.1",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^1.0.0-rc3",
     "rimraf": "^2.4.3",
-    "sass-loader": "^2.0.1",
-    "style-loader": "^0.12.3",
+    "sanitize.css": "^3.0.0",
+    "sass-loader": "^3.1.1",
+    "standard": "^5.3.1",
+    "style-loader": "^0.13.0",
+    "svg-loader": "0.0.2",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+    "youtube-iframe": "^1.0.1"
   },
+  "devDependencies": {},
   "license": "MIT"
 }
