--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Magnus Bergman <hello@magnus.sexy>",
   "engines": {
     "node": "5.0.0",
-    "npm": "3.3.9"
+    "npm": "3.3.12"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "clean": "rimraf public",
     "start": "node server",
     "dev": "npm-run-all --parallel dev:api dev:web",
-    "dev:web": "NODE_ENV=dev webpack-dev-server --progress --colors --hot --inline",
+    "dev:web": "NODE_ENV=dev webpack-dev-server --colors --progress --hot --inline",
     "dev:api": "PORT=5000 nodemon server -w server",
     "prebuild": "npm run clean -s",
     "build": "NODE_ENV=production webpack -p --colors --progress"
