--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "babel-core": "^5.8.33",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^5.3.3",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-1": "^6.0.15",
     "classnames": "^2.2.0",
     "color": "^0.10.1",
     "compression": "^1.6.0",
@@ -61,16 +58,12 @@
     "nodemon": "^1.8.0",
     "npm-run-all": "^1.2.12",
     "object-assign": "^4.0.1",
-    "offline-plugin": "^1.3.1",
     "postcss": "^5.0.10",
     "postcss-loader": "^0.7.0",
     "radium": "^0.14.3",
-    "random-global": "^1.0.1",
-    "random-string": "^0.1.2",
     "raw-loader": "^0.5.1",
     "react": "^0.14.1",
     "react-addons-transition-group": "^0.14.1",
-    "react-addons-update": "^0.14.2",
     "react-dom": "^0.14.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0-rc3",
@@ -82,8 +75,7 @@
     "svg-loader": "0.0.2",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
-    "youtube-iframe": "^1.0.1"
+    "webpack-dev-server": "^1.12.1"
   },
   "devDependencies": {},
   "license": "MIT"
