Remove npm run all due to exit bug.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "standard",
     "clean": "rimraf public",
     "start": "node server",
-    "dev": "npm-run-all --parallel dev:api dev:web",
+    "dev": "npm run dev:api & npm run dev:web",
     "dev:web": "NODE_ENV=dev webpack-dev-server --colors --progress --hot --inline",
     "dev:api": "PORT=5000 nodemon server -w server",
     "prebuild": "npm run clean -s",
@@ -56,7 +56,6 @@
     "morgan": "^1.6.1",
     "node-sass": "^3.4.1",
     "nodemon": "^1.8.0",
-    "npm-run-all": "^1.2.12",
     "object-assign": "^4.0.1",
     "postcss": "^5.0.10",
     "postcss-loader": "^0.7.0",
