Replace webpack-dev-server in favor of webpack-hot-middleware and webpack-dev-middleware.

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,10 @@
     "es2015",
     "stage-1",
     "react"
-  ]
+  ],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
