--- a/package.json
+++ b/package.json
@@ -12,42 +12,14 @@
     "url": "git@github.com:genesishq/genesis.git"
   },
   "scripts": {
-    "postinstall": "better-npm-run build",
-    "test": "npm run lint & better-npm-run test",
+    "postinstall": "npm run build",
+    "test": "npm run lint & cross-env NODE_ENV=test karma start",
     "lint": "standard",
     "clean": "rimraf public",
-    "start": "node server",
-    "dev": "npm run dev:api & npm run dev:web",
-    "dev:web": "better-npm-run dev:web",
-    "dev:api": "better-npm-run dev:api",
+    "start": "cross-env NODE_ENV=production node server",
+    "dev": "cross-env NODE_ENV=development nodemon server -w server",
     "prebuild": "npm run clean -s",
-    "build": "better-npm-run build"
-  },
-  "betterScripts": {
-    "test": {
-      "command": "karma start",
-      "env": {
-        "NODE_ENV": "test"
-      }
-    },
-    "dev:api": {
-      "command": "nodemon server -w server",
-      "env": {
-        "PORT": 5000
-      }
-    },
-    "dev:web": {
-      "command": "webpack-dev-server --colors --progress --hot --inline",
-      "env": {
-        "NODE_ENV": "dev"
-      }
-    },
-    "build": {
-      "command": "webpack -p --colors --progress",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    }
+    "build": "cross-env NODE_ENV=production webpack -p --colors --progress"
   },
   "standard": {
     "parser": "babel-eslint"
@@ -59,15 +31,18 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-stage-1": "^6.3.13",
     "better-npm-run": "0.0.5",
     "body-parser": "^1.14.2",
     "classnames": "^2.2.2",
     "compression": "^1.6.0",
     "cors": "^2.7.1",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "csswring": "^4.1.1",
     "es6-promise": "^3.0.2",
+    "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.6.2",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
@@ -108,7 +83,8 @@
     "svg-loader": "0.0.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0",
     "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {},
