--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "flux": "^2.1.1",
-    "history": "^1.17.0",
     "html-webpack-plugin": "^1.7.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
@@ -74,7 +73,7 @@
     "react-addons-transition-group": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^1.0.3",
+    "react-router": "^2.0.0-rc4",
     "rimraf": "^2.5.0",
     "sanitize.css": "^3.0.0",
     "sass-loader": "^3.1.2",
