Replace flux with redux.

--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,12 @@
   "env": {
     "development": {
       "presets": ["react-hmre"]
+    },
+    "production": {
+      "plugins": [
+        "transform-react-constant-elements",
+        "transform-react-inline-elements"
+      ]
     }
   }
 }
