--- a/package.json
+++ b/package.json
@@ -36,65 +36,65 @@
     "parser": "babel-eslint"
   },
   "dependencies": {
-    "autoprefixer": "^6.2.3",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.1",
+    "autoprefixer": "^6.3.1",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta9",
+    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-1": "^6.3.13",
     "body-parser": "^1.14.2",
-    "classnames": "^2.2.2",
-    "compression": "^1.6.0",
+    "classnames": "^2.2.3",
+    "compression": "^1.6.1",
     "cors": "^2.7.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "csswring": "^4.1.1",
+    "csswring": "^4.2.1",
     "es6-promise": "^3.0.2",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.6.2",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "flux": "^2.1.1",
-    "html-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^2.8.1",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.18",
+    "karma": "^0.13.19",
     "karma-cli": "^0.1.2",
     "karma-mocha": "^0.2.1",
     "karma-nyan-reporter": "^0.2.3",
-    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.1.0",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.4",
+    "mocha": "^2.4.5",
     "morgan": "^1.6.1",
     "node-sass": "^3.4.2",
     "nodemon": "^1.8.1",
     "object-assign": "^4.0.1",
-    "phantomjs": "^1.9.19",
     "phantomjs-polyfill": "0.0.1",
+    "phantomjs-prebuilt": "^2.1.3",
     "postcss": "^5.0.14",
     "postcss-loader": "^0.8.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.5",
-    "react-addons-test-utils": "^0.14.5",
-    "react-addons-transition-group": "^0.14.5",
-    "react-dom": "^0.14.5",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-addons-transition-group": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.0.0-rc4",
-    "rimraf": "^2.5.0",
-    "sanitize.css": "^3.0.0",
+    "react-router": "^2.0.0-rc5",
+    "rimraf": "^2.5.1",
+    "sanitize.css": "^3.2.0",
     "sass-loader": "^3.1.2",
     "standard": "^5.4.1",
     "style-loader": "^0.13.0",
     "svg-loader": "0.0.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
-    "whatwg-fetch": "^0.10.1"
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {},
   "license": "MIT"
